# rust_example

./: readme.md
actix_sqlite_web_server/: Cargo.toml  readme.md  todos.db
actix_sqlite_web_server/.sqlx/: query-f55d0b3dfd39b133bb74e318620bc35e0add485bce3fb1e2ad41b07495872d4a.json
actix_sqlite_web_server/src/: db.rs  main.rs
file_searcher/: Cargo.toml
file_searcher/example_dir/: file2.txt
file_searcher/src/: main.rs
minigrep/: Cargo.toml
minigrep/src/: lib.rs  main.rs
smart_money/: Cargo.toml  smart_money.db
smart_money/locales/: app.yml
smart_money/src/: main.rs
smart_money/src/api/: mod.rs
smart_money/src/api/v1/: mod.rs  users.rs
smart_money/src/model/: api_response.rs  error_code.rs  mod.rs
smart_money/src/utils/: db.rs  logger.rs
weather/: Cargo.toml
weather/src/: main.rs
