[package]
name = "actix_sqlite_web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio = { version = "1.43.0", features = ["full"] }
actix-web = "4.9.0"
# sqlx = { version = "0.8", features = [ "runtime-tokio" ,"sqlite","json" ] }
serde = "1.0.217"
anyhow = "1.0"
futures = "0.3"
sqlx = { version = "0.8", features = [ "sqlite", "runtime-tokio", "tls-native-tls" ] }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}